# cmd/sync/docs/swagger.json
@@ -81,6 +81,12 @@
                 "db_version": {
                     "type": "string"
                 },
+                "host": {
+                    "type": "string"
+                },
+                "maxProcess": {
+                    "type": "string"
+                },
                 "status": {
                     "type": "string"
                 },
